[package]
name = "carduelis"
version = "0.1.0"
authors = ["Kythyria Tieran <kythyria@berigora.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
nom = "6.1.2"
regex = "1.5.4"
lazy_static = "1.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"
ego-tree = "0.6.2"

rowan = "0.14.1"
logos = "0.12.0"