[package]
name = "carduelis"
version = "0.1.0"
authors = ["Kythyria Tieran <kythyria@berigora.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
lazy_static = "1.4.0"
logos = "0.12.0"
num_enum = "0.5.4"
chumsky = "0.8.0"
